[package]
name = "pkg"
version = "3.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "Utility macros and functions for crates."
edition = "2021"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/pkg"
repository = "https://github.com/Juici/pkg-rs"

keywords = ["cargo", "package"]
categories = ["development-tools"]

[dependencies]
once_cell = { version = "1", optional = true }

[features]
default = ["semver", "rt_bin_name"]

std = []
semver = []
rt_bin_name = ["once_cell", "std"]
