[package]
name = "pkg-macros"
version.workspace = true
authors.workspace = true
description = "Procedural macros for the `pkg` crate."
edition.workspace = true
license.workspace = true
rust-version.workspace = true

repository.workspace = true

[lib]
proc-macro = true

[features]
default = ["git"]
git = ["gix"]

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", default-features = false }

thiserror = "1.0.56"

gix = { version = "0.58.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
