[package]
name = "pkg-macros"
version = "3.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "Procedural macros for pkg."
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[features]
default = []

# Build script utilities.
build = []
git = ["build", "git2"]

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
quote = "1.0"

git2 = { version = "0.13", optional = true }

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "parsing", "proc-macro"]
