[package]
name = "pkg_impl"
version = "2.0.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Procedural macros for pkg crate"

documentation = "https://docs.rs/pkg_impl"
homepage = "https://github.com/Juici/pkg-rs"
repository = "https://github.com/Juici/pkg-rs"
license = "MIT"

workspace = ".."

[lib]
proc-macro = true
